--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -12,6 +12,11 @@
   </head>
 
   <body>
+    <%= if logged_in?(@conn) do %>
+      <p>Welcome back <%= current_user(@conn).username %>
+    <% end %>
+    <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+    <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
     <main role="main">
       <%= render @view_module, @view_template, assigns %>
     </main>
