--- a/web/static/css/components/chat.scss
+++ b/web/static/css/components/chat.scss
@@ -29,6 +29,22 @@
 }
 
 .message {
+  padding: 5px 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.message__avatar-container {
+  flex-shrink: 0;
+}
+
+.message__body-container {
+  flex-grow: 1;
+  margin-left: 15px;
+}
+
+.message__body {
+  white-space: pre;
 }
 
 .messagebox {
