--- a/web/static/css/components/chat.scss
+++ b/web/static/css/components/chat.scss
@@ -9,10 +9,11 @@
   flex-direction: column;
   flex-basis: 200px;
   flex-shrink: 0;
-  background: #ccc;
   max-width: 200px;
   padding: 10px;
   height: 100vh;
+  background: #45515d;
+  color: white;
 }
 
 .room-container {
@@ -20,7 +21,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  background: #eee;
+  background: #f5f6f9;
 }
 
 .messagelist {
@@ -59,6 +60,7 @@
   padding: 10px;
   background: white;
   border-radius: 5px;
+  border: 1px solid #ddd;
   overflow: auto;
 
   &:focus {
