--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -12,6 +12,7 @@
 
     <title>Hello SneakyChat!</title>
     <link rel="stylesheet" href="http://localhost:8080/priv/static/js/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
 
   <body>
