--- a/web/static/css/components/chat.scss
+++ b/web/static/css/components/chat.scss
@@ -10,10 +10,24 @@
   flex-basis: 200px;
   flex-shrink: 0;
   max-width: 200px;
-  padding: 10px;
+  padding: 15px;
   height: 100vh;
   background: #45515d;
   color: white;
+}
+
+.rooms-bar__heading {
+  margin-bottom: 8px;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  padding-bottom: 5px;
+  border-bottom: 1px solid lighten(#45515d, 20%);
+}
+
+.rooms-bar__people {
+  font-weight: lighter;
+  line-height: 1.5em;
+  color: #dadcde;
 }
 
 .room-container {
