--- a/web/static/css/components/chat.scss
+++ b/web/static/css/components/chat.scss
@@ -97,6 +97,12 @@ $rooms-bar-background: #45515d;
   width: 40px;
   height: 40px;
   background: #aaa;
+
+  img {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .message__header {
