--- a/web/templates/registration/new.html.eex
+++ b/web/templates/registration/new.html.eex
@@ -11,6 +11,11 @@
   </div>
 
   <div class="form-group">
+    <%= text_input f, :email, placeholder: "Email", class: "form-control" %>
+    <%= error_tag f, :email %>
+  </div>
+
+  <div class="form-group">
     <%= password_input f, :password, placeholder: "Password", class: "form-control" %>
     <%= error_tag f, :password %>
   </div>
