Add link to create account

--- a/web/templates/session/new.html.eex
+++ b/web/templates/session/new.html.eex
@@ -8,3 +8,5 @@
   </div>
   <%= submit "Sign in", class: "btn btn-primary" %>
 <% end %>
+
+<%= link "Create new account", to: registration_path(@conn, :new) %>
